Fixed: Alignment of svgs with Features

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -116,5 +116,5 @@ body {
   position: absolute;
   width: 48px;
   right: 48px;
-  margin-top: 6px;
+  margin-top: 3px;
 }
